hphp/hack/test/typecheck/idx3_5.php
<?hh

function m(): Map<string, int> {
  return Map {};
}

function f(): int {
  $m = m();
  $x = idx(0, 'a', 0);
  return $x;
}
